--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -9,5 +9,5 @@
 </div>
 
 <%= content_for :additional_scripts do %>
-    <%= javascript_include_tag 'moisture_reports' %>
+    <%= javascript_include_tag 'reports' %>
 <% end %>
