--- a/app/views/reports/show.html.haml
+++ b/app/views/reports/show.html.haml
@@ -2,7 +2,7 @@
 
 %p
   %b Value:
-  = @moisture_report.value
+  = @report.value
 
 = link_to 'Edit', edit_moisture_report_path(@moisture_report)
 \|
