--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,15 +14,15 @@
       <li class="point">:</li>
       <li id="sec"></li>
     </ul>
+    <ul class="nav navbar-nav navbar-left list-unstyled list-inline text-amber date-list">
+      <li><i class="fontello-temperatire text-amber"></i>
+      </li>
+      <li id="Temperature"></li>
+    </ul>
 
 
   </div>
   <div class="col-lg-6">
-    <div style="margin-bottom:0;" class="alert text-white ">
-      <button data-dismiss="alert" class="close" type="button">×</button>
-      <span class="entypo-info-circled"></span>
-      <strong>Wellcome back!</strong>&nbsp;&nbsp;Dave, your last loggin was 1 day ago. Have a nice day
-    </div>
   </div>
 
   <div class="col-lg-3">
