--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
   <!-- pace loader -->
   <script src="js/pace/pace.js"></script>
   <link href="js/pace/themes/orange/pace-theme-flash.css" rel="stylesheet"/>
+  <%= stylesheet_link_tag 'application' %>
 </head>
 
 <body role="document">
